cmake_minimum_required(VERSION 3.15)

project( cxxtools VERSION 3.1 LANGUAGES C CXX )

#set(CMAKE_CXX_STANDARD 11)
#set(CMAKE_CXX_STANDAR_REQUIRED ON)
#set(CMAKE_CXX_EXTENSION OFF)

set(CMAKE_VERBOSE_MAKEFILE ON)

#set(CMAKE_FIND_LIBRARY_SUFFIX ".a")
#set(CMAKE_BUILD_SHARED_LIBS OFF)
#set(CMAKE_EXE_LINKER_FLAGS "-static")

#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build/libs)

add_subdirectory(src)